--- a/index.html
+++ b/index.html
@@ -66,18 +66,28 @@
     }
 
     .chevron {
-      width: 20px;
-      height: 20px;
-      border-right: 2px solid white;
-      border-top: 2px solid white;
+      width: 24px;
+      height: 24px;
+      border-right: 4px solid white;
+      border-top: 4px solid white;
       transform: rotate(-45deg) scaleY(0.6);
-      transition: transform 0.4s ease;
     }
 
     .chevron.down {
       transform: rotate(135deg) scaleY(0.6);
     }
 
+    .chevron-group {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 2px;
+      transition: transform 0.4s ease;
+    }
+
+    .chevron-group.down {
+      transform: rotate(180deg);
+    }
     .btn-warning:hover {
       background: #ffc107;
       transform: scale(1.05);
@@ -100,7 +110,10 @@
   <div id="formContainer" class="form-container container">
     <!-- Toggle Arrow -->
     <div class="arrow-toggle" onclick="toggleForm()">
-      <div id="chevronIcon" class="chevron"></div>
+      <div id="chevronGroup" class="chevron-group">
+        <div class="chevron"></div>
+        <div class="chevron"></div>
+      </div>
     </div>
 
     <div class="form-section">
@@ -230,13 +243,13 @@
     let formUp = false;
     function toggleForm() {
       const form = document.getElementById('formContainer');
-      const arrow = document.getElementById('chevronIcon');
+      const arrowGroup = document.getElementById('chevronGroup');
       if (!formUp) {
         form.style.top = "60px";
-        arrow.classList.add("down");
+        arrowGroup.classList.remove("down");
       } else {
         form.style.top = "calc(100vh - 240px)";
-        arrow.classList.remove("down");
+        arrowGroup.classList.remove("down");
       }
       formUp = !formUp;
     }
