--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     .arrow-toggle {
       cursor: pointer;
       width: 40px;
-      height: 20px;
+      height: 50px; /* Enough room for two 24px arrows + spacing */
       margin: 0 auto 10px;
       display: flex;
       justify-content: center;
