--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     }
 
     .chevron {
-      width: 24px;
-      height: 24px;
-      border-right: 4px solid white;
-      border-top: 4px solid white;
+      width: 18px;               /* was 24px */
+      height: 18px;
+      border-right: 3px solid white;  /* thinner */
+      border-top: 3px solid white;
       transform: rotate(-45deg) scaleY(0.6);
       animation: bounce 1.4s infinite ease-in-out;
     }
