--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
     }
 
     .chevron {
-      width: 18px;               /* was 24px */
+      box-sizing: content-box;
+      width: 18px;
       height: 18px;
-      border-right: 3px solid white;  /* thinner */
+      border-right: 3px solid white;
       border-top: 3px solid white;
       transform: rotate(-45deg) scaleY(0.6);
       animation: bounce 1.4s infinite ease-in-out;
