--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
       height: 100%;
+      margin: 0;
       overflow: hidden;
-      font-family: 'Segoe UI', sans-serif;
       background-color: black;
+      font-family: 'Segoe UI', sans-serif;
     }
 
     body::before {
@@ -21,7 +20,7 @@
       top: 0; left: 0;
       width: 100%;
       height: 100%;
-      background: url('images/ekinform.jpg') no-repeat center top;
+      background: url('images/ekinform.jpg') no-repeat center top fixed;
       background-size: 95% auto;
       z-index: 0;
       opacity: 0;
@@ -40,88 +39,100 @@
       top: calc(100vh - 240px);
       left: 0;
       width: 100%;
-      height: calc(100vh - 80px);
-      background-color: rgba(30, 30, 30, 0.96);
       z-index: 2;
+      background-color: rgba(30, 30, 30, 0.96);
       padding: 40px 20px 20px;
       color: white;
+      overflow-y: auto;
+      height: calc(100vh - 80px);
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
-      transition: top 0.6s ease-in-out;
-      overflow-y: auto;
+      transition: top 0.8s ease-out;
     }
 
     .arrow-toggle {
       cursor: pointer;
-      margin: -20px auto 8px;
-      width: 40px;
-      height: 20px;
+      margin: -20px auto 5px;
+      width: 42px;
+      height: 24px;
       display: flex;
       justify-content: center;
+      align-items: center;
+      z-index: 3;
+      background: transparent;
+      border: none;
+      animation: pulseGlow 1.6s infinite;
     }
 
-    .arrow-toggle svg {
-      width: 24px;
-      height: 24px;
+    @keyframes pulseGlow {
+      0%, 100% { filter: drop-shadow(0 0 0 white); }
+      50% { filter: drop-shadow(0 0 6px white); }
+    }
+
+    .chevron-svg {
+      width: 100%;
+      height: 100%;
+      fill: white;
       transition: transform 0.4s ease;
     }
 
-    .arrow-toggle.up svg {
+    .rotate-down {
       transform: rotate(180deg);
-    }
-
-    .arrow-label {
-      text-align: center;
-      font-size: 0.9rem;
-      margin-bottom: 4px;
-    }
-
-    .disclaimer-box {
-      background-color: #ffffff;
-      color: #000000;
-      padding: 15px;
-      border-radius: 8px;
-      max-height: 240px;
-      overflow-y: scroll;
-      font-size: 0.85rem;
     }
 
     .btn-warning:hover {
       background: #ffc107;
       transform: scale(1.05);
     }
+
+    .accordion-button {
+      background-color: #333;
+      color: white;
+    }
+
+    .accordion-body {
+      background-color: #444;
+      color: white;
+    }
   </style>
 </head>
 <body>
 
-  <!-- Form -->
+  <!-- Form Container -->
   <div id="formContainer" class="form-container container">
-    <div id="arrowLabel" class="arrow-label">按此填寫參加表格</div>
-    <div id="arrowToggle" class="arrow-toggle" onclick="toggleForm()">
-      <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <polyline points="6 9 12 15 18 9"></polyline>
+    <!-- Toggle Arrow -->
+    <div class="arrow-toggle" onclick="toggleForm()">
+      <svg id="chevronIcon" class="chevron-svg rotate-down" viewBox="0 0 24 24">
+        <path d="M12 15.5L6 9.5L7.4 8.1L12 12.7L16.6 8.1L18 9.5L12 15.5ZM12 22.5L6 16.5L7.4 15.1L12 19.7L16.6 15.1L18 16.5L12 22.5Z"/>
       </svg>
     </div>
 
     <div class="form-section">
-      <p>
-        <a class="btn btn-outline-light btn-sm mb-3" data-bs-toggle="collapse" href="#eventDetails" role="button">
-          👉 查看抽獎活動詳情
-        </a>
-      </p>
-      <div class="collapse" id="eventDetails">
-        <div class="card card-body bg-dark text-white border-light">
-          <h5 class="mb-3">抽獎活動詳情</h5>
-          <ul>
-            <li>地點：The Theatre at Great Canadian Toronto</li>
-            <li>日期：2025年6月28日 晚上8:00</li>
-            <li>獎品：鄭伊健親筆簽名演唱會海報</li>
-            <li>截止日期：2025年6月15日</li>
-          </ul>
+      <div class="text-center text-white" style="font-size: 0.9rem; margin-bottom: 8px;">
+        請按箭頭開啟表格填寫
+      </div>
+
+      <!-- Accordion for 活動詳情 -->
+      <div class="accordion mb-3" id="accordionDetails">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+              👉 查看抽獎活動詳情
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionDetails">
+            <div class="accordion-body">
+              <ul>
+                <li>地點：The Theatre at Great Canadian Toronto</li>
+                <li>日期：2025年6月28日 晚上8:00</li>
+                <li>獎品：鄭伊健親筆簽名演唱會海報</li>
+                <li>截止日期：2025年6月15日</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
 
-      <hr />
       <form id="drawForm">
         <div class="row">
           <div class="mb-3 col-md-6">
@@ -146,7 +157,7 @@
         <div class="form-check mt-3">
           <input class="form-check-input" type="checkbox" id="agreeCheck">
           <label class="form-check-label" for="agreeCheck">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#disclaimerModal">我已閱讀並同意以上條款</a>
+            我已閱讀並同意以上條款
           </label>
         </div>
         <button type="submit" class="btn btn-warning mt-3" id="submitBtn" disabled>提交</button>
@@ -159,32 +170,10 @@
     </div>
   </div>
 
-  <!-- Disclaimer Modal -->
-  <div class="modal fade" id="disclaimerModal" tabindex="-1" aria-labelledby="disclaimerModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-      <div class="modal-content bg-light text-dark">
-        <div class="modal-header">
-          <h5 class="modal-title" id="disclaimerModalLabel">抽獎活動條款</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="關閉"></button>
-        </div>
-        <div class="modal-body">
-          <div class="disclaimer-box">
-            <p>參與本抽獎活動即表示您同意以下條款：</p>
-            <ol>
-              <li><strong>目的：</strong>推廣「鄭伊健 – HERE & NOW 2025」多倫多演唱會。</li>
-              <li><strong>參加資格：</strong>限居住於加拿大、年滿18歲人士，每人限報名一次。</li>
-              <li><strong>獎品：</strong>鄭伊健親筆簽名之限量演唱會海報。</li>
-              <li><strong>個人資料用途：</strong>僅用於本次抽獎活動，不會外洩或販售。</li>
-              <li><strong>中獎通知：</strong>將於2025年6月18日以電郵方式通知中獎者。</li>
-              <li><strong>主辦權利：</strong>主辦方有權隨時取消或修改活動內容，無須另行通知。</li>
-            </ol>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Scripts -->
+  <!-- Script -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-firestore-compat.js"></script>
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyB6-I9oj4hti5rsxN-dMZQdzeoXTsKX0Xg",
@@ -192,8 +181,7 @@
       projectId: "ldform",
       storageBucket: "ldform.firebasestorage.app",
       messagingSenderId: "342526487179",
-      appId: "1:342526487179:web:bddee95d3bada6deac428e",
-      measurementId: "G-LESV793JQ0"
+      appId: "1:342526487179:web:bddee95d3bada6deac428e"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
@@ -213,35 +201,28 @@
         createdate: firebase.firestore.Timestamp.now(),
         timestamp: new Date().toISOString()
       };
-
       try {
         await db.collection("registrations").add(data);
         document.getElementById('drawForm').style.display = 'none';
         document.getElementById('thankYou').style.display = 'block';
       } catch (err) {
-        console.error("儲存失敗：", err);
         alert("提交失敗，請稍後再試。");
       }
     });
 
-    let formExpanded = false;
+    let formUp = false;
     function toggleForm() {
-      const formContainer = document.getElementById('formContainer');
-      const arrowToggle = document.getElementById('arrowToggle');
-      const label = document.getElementById('arrowLabel');
-
-      if (!formExpanded) {
-        formContainer.style.top = "60px";
-        arrowToggle.classList.add('up');
-        label.innerText = "按此縮小表格";
+      const form = document.getElementById('formContainer');
+      const arrow = document.getElementById('chevronIcon');
+      if (!formUp) {
+        form.style.top = "60px";
+        arrow.classList.remove("rotate-down");
       } else {
-        formContainer.style.top = "calc(100vh - 240px)";
-        arrowToggle.classList.remove('up');
-        label.innerText = "按此填寫參加表格";
+        form.style.top = "calc(100vh - 240px)";
+        arrow.classList.add("rotate-down");
       }
-      formExpanded = !formExpanded;
+      formUp = !formUp;
     }
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
