model for disclaimer

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="form-check mt-3">
           <input class="form-check-input" type="checkbox" id="agreeCheck">
           <label class="form-check-label" for="agreeCheck">
-            我已閱讀並同意以上條款
+            我已閱讀並同意 <a href="#" data-bs-toggle="modal" data-bs-target="#disclaimerModal">以上條款</a>
           </label>
         </div>
         <button type="submit" class="btn btn-warning mt-3" id="submitBtn" disabled>提交</button>
