--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       top: 0; left: 0;
       width: 100%;
       height: 100%;
-      background: url('images/ekinform.jpg') no-repeat center top fixed;
+      background: url('images/ekinform3.jpg') no-repeat center top fixed;
       background-size: 95% auto;
       z-index: 0;
       opacity: 0;
