--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
       <div class="text-center text-white" style="font-size: 0.9rem; margin-bottom: 8px;">
         按此填寫參加表格
       </div>
-      <div class="text-center text-white" style="font-size: 1.2rem; margin-bottom: 10px;">
-      </div>
-
+      <hr class="text-white" style="margin-top: -4px; margin-bottom: 16px; border-color: white; opacity: 0.3;">
+      
       <!-- Accordion placeholder -->
       <div id="accordionContainer"></div>
 
@@ -130,7 +129,7 @@
         <div class="form-check mt-3">
           <input class="form-check-input" type="checkbox" id="agreeCheck">
           <label class="form-check-label" for="agreeCheck">
-            我已閱讀並同意 <a href="#" data-bs-toggle="modal" data-bs-target="#disclaimerModal">以上條款</a>
+            <a href="#" data-bs-toggle="modal" data-bs-target="#disclaimerModal">我已閱讀並同意相關條款</a>
           </label>
         </div>
         <button type="submit" class="btn btn-warning mt-3" id="submitBtn" disabled>提交</button>
